fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,7 @@ html {
 body {
   font-family: "Mona Sans";
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 img {
